# ChaosLibrary

./: .gitignore  CMakeLists.txt  README.md  bifurcationHOST.h  cudaLibrary.cu  cudaLibrary.cuh  main.cpp
Basins/: CMakeLists.txt
Basins/include/: basinsCUDA.cuh  basinsHOST.h
Basins/src/: basinsCUDA.cu  basinsHOST.cpp
Bifurcation/: CmakeLists.txt  bifurcationHOST.cpp  bifurcationHOST.h  main.cpp
Bifurcation/include/: bifurcation.h  bifurcationCUDA.cuh  bifurcationHOST.h
Bifurcation/src/: bifurcation.cpp  bifurcationCUDA.cu  bifurcationHOST.cpp  bifurcationHOST.cu
LLE/: CmakeLists.txt
LLE/include/: LLECUDA.cuh  LLEHost.cuh  LLEHost.h
LLE/src/: LLECUDA.cu  LLEHost.cpp  LLEHost.cu
debri/: CMakeLists.txt  cudaLibrary.cu  cudaLibrary.cuh  hostLibrary.cu  hostLibrary.cuh
scripts/: all_in_one.bat  attracor.py  basin_plot.py  bifurcation1d.py  build.bat  clean.bat  heatmap.py  plot_basins.py  plot_basins_diff.py  plot_basins_matlab.py  plot_basins_performance.py  plot_bifurcation_performance.py  plot_heatmap.py  plot_lle_heatmap.py  plot_lle_performance.py  plot_single_heatmap.py  run.bat  update.bat  visualize.bat
src/: main.cpp  main.cu
systems/: CMakeLists.txt  systems.cu  systems.cuh
